--- a/source/R5T.F0093/R5T.F0093.csproj
+++ b/source/R5T.F0093/R5T.F0093.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <NoWarn>1591</NoWarn>
@@ -15,10 +15,7 @@
     <RepositoryUrl>https://github.com/SafetyCone/R5T.F0093.git</RepositoryUrl>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\R5T.F0000\source\R5T.F0000\R5T.F0000.csproj" />
     <ProjectReference Include="..\..\..\R5T.F0080\source\R5T.F0080\R5T.F0080.csproj" />
-    <ProjectReference Include="..\..\..\R5T.F0087\source\R5T.F0087\R5T.F0087.csproj" />
-    <ProjectReference Include="..\..\..\R5T.F0089\source\R5T.F0089\R5T.F0089.csproj" />
     <ProjectReference Include="..\..\..\R5T.F0090\source\R5T.F0090\R5T.F0090.csproj" />
   </ItemGroup>
 </Project>
